--- a/prometheus/alert_rule_ubuntu_example.yml
+++ b/prometheus/alert_rule_ubuntu_example.yml
@@ -1,40 +1,53 @@
 groups:
-- name: alert.rules
+- name: example
   rules:
-  - alert: InstanceDown
+  - alert: HighRequestLatency
+    expr: job:request_latency_seconds:mean5m{job="myjob"} > 0.5
+    for: 10m
+    labels:
+      severity: page
+    annotations:
+      summary: High request latency
+
+
+- name: example
+  rules:
+  - alert: DEV_KEN Instance Down
     expr: up == 0
     for: 1m
     labels:
-      severity: "critical"
+      severity: critical
     annotations:
-      summary: "Endpoint {{ $labels.instance }} down"
-      description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minutes."
-  
+      description: '{{ $labels.hostname }} of job {{ $labels.job }} has been down for more than 1 minute.'
+      summary: 'Endpoint {{ $labels.hostname }} of job {{ $labels.job }} down'
+
+
   - alert: HostOutOfMemory
     expr: node_memory_MemAvailable / node_memory_MemTotal * 100 < 25
     for: 5m
     labels:
       severity: warning
     annotations:
-      summary: "Host out of memory (instance {{ $labels.instance }})"
+      summary: "Host out of memory (hostname {{ $labels.hostname }})"
       description: "Node memory is filling up (< 25% left)\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
 
   - alert: HostOutOfDiskSpace
     expr: (node_filesystem_avail{mountpoint="/"}  * 100) / node_filesystem_size{mountpoint="/"} < 50
-    for: 1s
+    for: 1m
     labels:
       severity: warning
     annotations:
-      summary: "Host out of disk space (instance {{ $labels.instance }})"
+      summary: "Host out of disk space (hostname {{ $labels.hostname }})"
       description: "Disk is almost full (< 50% left)\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
 
   - alert: HostHighCpuLoad
-    expr: (sum by (instance) (irate(node_cpu{job="node_exporter_metrics",mode="idle"}[5m]))) > 80
+    expr: (sum by (hostname) (irate(node_cpu{job="node_exporter_metrics",mode="idle"}[5m]))) > 80
     for: 5m
     labels:
       severity: warning
     annotations:
-      summary: "Host high CPU load (instance {{ $labels.instance }})"
+      summary: "Host high CPU load (hostname {{ $labels.hostname }})"
       description: "CPU load is > 80%\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+
