--- a/prometheus/alert_rule_ubuntu_example.yml
+++ b/prometheus/alert_rule_ubuntu_example.yml
@@ -1,5 +1,5 @@
 groups:
-- name: example
+- name: kendanic_alert_service
   rules:
   - alert: HighRequestLatency
     expr: job:request_latency_seconds:mean5m{job="myjob"} > 0.5
@@ -9,9 +9,6 @@ groups:
     annotations:
       summary: High request latency
 
-
-- name: example
-  rules:
   - alert: DEV_KEN Instance Down
     expr: up == 0
     for: 1m
@@ -20,7 +17,6 @@ groups:
     annotations:
       description: '{{ $labels.hostname }} of job {{ $labels.job }} has been down for more than 1 minute.'
       summary: 'Endpoint {{ $labels.hostname }} of job {{ $labels.job }} down'
-
 
   - alert: HostOutOfMemory
     expr: node_memory_MemAvailable / node_memory_MemTotal * 100 < 25
@@ -31,7 +27,6 @@ groups:
       summary: "Host out of memory (hostname {{ $labels.hostname }})"
       description: "Node memory is filling up (< 25% left)\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
-
   - alert: HostOutOfDiskSpace
     expr: (node_filesystem_avail{mountpoint="/"}  * 100) / node_filesystem_size{mountpoint="/"} < 50
     for: 1m
@@ -41,7 +36,6 @@ groups:
       summary: "Host out of disk space (hostname {{ $labels.hostname }})"
       description: "Disk is almost full (< 50% left)\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
-
   - alert: HostHighCpuLoad
     expr: (sum by (hostname) (irate(node_cpu{job="node_exporter_metrics",mode="idle"}[5m]))) > 80
     for: 5m
@@ -50,4 +44,3 @@ groups:
     annotations:
       summary: "Host high CPU load (hostname {{ $labels.hostname }})"
       description: "CPU load is > 80%\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
-
